QuorumWebsite/examples/Errors/Error1.quorum
integer value = 10
outputvalue